<resources>
    <string name="app_name">JuliaMaksimkin</string>
    <string name="my_movies">My Movies</string>
    <string name="subject">Subject:</string>
    <string name="body">Body:</string>
    <string name="url">URL:</string>
    <string name="show">Show</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="search">Search:</string>
    <string name="go">Go</string>
    <string name="exit">Exit</string>
    <string name="delete_all_movies">Delete All Movies</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="rate">Rate Me:</string>
    <string name="add">Add a Movie</string>
    <string name="find">Find in Internet</string>
    <string name="check_as_watched">Check as Watched</string>
    <string name="watched">Watched</string>
    <string name="are_you_sure">Are You Sure?</string>
    <string name="you_want_delete_all_movies">You want delete all movies.</string>
</resources>
