<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="photosides.juliamaksimkin.EditingActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">

            <TextView
                android:id="@+id/textViewSubject"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/subject"
                android:textSize="25sp" />

            <EditText
                android:id="@+id/editTextSubject"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textViewSubject"
                android:singleLine="true"
                android:textSize="25sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/body"
            android:textSize="25sp"
            android:layout_marginBottom="10dp"/>

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView"
            android:layout_marginBottom="10dp">

            <EditText
                android:id="@+id/editTextBody"
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:layout_below="@+id/editTextSubject"
                android:height="130dp"
                android:textSize="25sp" />

        </ScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/rate"
                android:textSize="25sp" />

            <RatingBar
                android:id="@+id/ratingBar"
                style="@style/foodRatingBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="15dp"
                android:isIndicator="false"
                android:numStars="10"
                android:rating="0"
                android:stepSize="0.1" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:text="@string/watched"
                android:textSize="20sp"
                android:id="@+id/checkBox" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/url"
                android:textSize="25sp" />

            <EditText
                android:id="@+id/editTextURL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:singleLine="true"
                android:textSize="25dp" />

            <Button
                android:id="@+id/buttonShow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="buttonShow_onClick"
                android:textAllCaps="false"
                android:text="@string/show"
                android:textSize="25sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/textViewLoad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp" />

        <ProgressBar
            android:id="@+id/progressBarLoad"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp" />

        <ImageView
            android:id="@+id/imageViewPicture"
            android:layout_width="match_parent"
            android:layout_height="420dp"
            android:scaleType="fitCenter"
            android:layout_marginBottom="10dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <ImageButton
                android:id="@+id/imageButtonPhoto"
                android:layout_width="80dp"
                android:layout_height="60dp"
                android:onClick="imageButtonPhoto_onClick"
                android:scaleType="fitCenter"
                android:src="@drawable/photo"
                android:textSize="25sp" />

            <Button
                android:id="@+id/buttonOK"
                android:layout_width="120dp"
                android:layout_height="60dp"
                android:onClick="buttonOK_onClick"
                android:text="@string/ok"
                android:textSize="25sp" />

            <Button
                android:id="@+id/buttonCancel"
                android:layout_width="120dp"
                android:layout_height="60dp"
                android:onClick="buttonCancel_onClick"
                android:text="@string/cancel"
                android:textSize="25sp"
                android:textAllCaps="false"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>